--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,21 +1,21 @@
 .modal {
-  width: 541px;
+  width: 570px;
   height: 100vh;
   border-radius: 24px;
   background: #fff;
   z-index: 999;
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
-  padding: 40px;
+  padding: 15px 35px 15px;
   box-sizing: border-box;
 }
 
 .image {
-  width: 461px;
+  width: 500px;
   height: 248px;
   margin: 0 auto;
   border-radius: 14px;
@@ -24,8 +24,8 @@
 
 .nameAdYear {
   display: block;
-  margin-top: 14px;
-  margin-bottom: 8px;
+  margin-top: 2px;
+  margin-bottom: 2px;
   color: #121417;
   font-family: Manrope;
   font-size: 18px;
@@ -44,7 +44,104 @@
 }
 
 .cityAndCountry {
+  display: block;
   box-sizing: border-box;
   width: 277px;
   height: 40px;
+  color: rgba(18, 20, 23, 0.5);
+  font-family: Manrope;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px; /* 150% */
+  margin-bottom: 8px;
+}
+
+.description {
+  color: #121417;
+  font-family: Manrope;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px; /* 142.857% */
+  margin-bottom: 8px;
+  display: block;
+}
+
+.accessoriesTitle {
+  color: #121417;
+  font-family: Manrope;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px; /* 142.857% */
+  margin-bottom: 24px;
+  display: block;
+  margin: 0;
+}
+
+.accessoriesText {
+  color: rgba(18, 20, 23, 0.5);
+  font-family: Manrope;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px; /* 150% */
+  margin: 0;
+}
+
+.functionalities {
+  color: rgba(18, 20, 23, 0.5);
+  font-family: Manrope;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px; /* 150% */
+  margin-bottom: 8px;
+}
+
+.rentalTitle {
+  color: #121417;
+  font-family: Manrope;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px; /* 142.857% */
+  margin-bottom: 4px;
+}
+
+.rental {
+  display: flex;
+  margin-bottom: 6px;
+}
+
+.age {
+  font-family: Montserrat;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 400;
+  color: #363535;
+  line-height: 18px;
+  letter-spacing: -0.24px;
+  box-sizing: border-box;
+  display: inline-flex;
+  padding: 7px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 35px;
+  background: #f9f9f9;
+}
+
+.icon {
+  position: absolute;
+  z-index: 1;
+  top: 3%;
+  left: 96%;
+  transform: translate(-50%, -50%);
+  width: 20px !important;
+  height: 20px !important;
+
+  fill: #121417;
+  background-color: transparent;
+  color: transparent;
 }
