--- a/src/components/Car/Car.module.css
+++ b/src/components/Car/Car.module.css
@@ -16,7 +16,7 @@
 }
 
 .active {
-  fill: red;
+  fill: #ff868d;
   width: 40px;
   height: 40px;
   position: absolute;
@@ -27,12 +27,14 @@
 
 .item {
   position: relative;
+  border-radius: 14px;
   display: flex;
   width: 274px;
   height: 426px;
   flex-direction: column;
   /* align-items: flex-start; */
   /* gap: 28px; */
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
 
 .firstBlock {
@@ -65,4 +67,5 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  padding: 0 10px 0;
 }
