--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -12,6 +12,13 @@
   flex-direction: column;
   padding: 15px 35px 15px;
   box-sizing: border-box;
+  overflow: scroll;
+}
+
+.modal::-webkit-scrollbar {
+  background-color: transparent;
+  scrollbar-width: 0;
+  scrollbar-width: none;
 }
 
 .image {
@@ -20,11 +27,12 @@
   margin: 0 auto;
   border-radius: 14px;
   object-fit: cover;
+  margin-bottom: 8px;
 }
 
 .nameAdYear {
   display: block;
-  margin-top: 2px;
+  margin-top: 0px;
   margin-bottom: 2px;
   color: #121417;
   font-family: Manrope;
@@ -112,12 +120,13 @@
 
 .rental {
   display: flex;
-  margin-bottom: 6px;
+  flex-wrap: wrap;
+  gap: 4px;
 }
 
 .age {
-  font-family: Montserrat;
-  font-size: 11px;
+  font-family: Manrope;
+  font-size: 12px;
   font-style: normal;
   font-weight: 400;
   color: #363535;
@@ -133,15 +142,44 @@
 }
 
 .icon {
-  position: absolute;
+  position: fixed;
   z-index: 1;
-  top: 3%;
-  left: 96%;
+  top: 7%;
+  left: 75%;
   transform: translate(-50%, -50%);
-  width: 20px !important;
-  height: 20px !important;
+  width: 40px !important;
+  height: 40px !important;
 
-  fill: #121417;
+  fill: rgba(18, 20, 23, 0.5);
   background-color: transparent;
   color: transparent;
+}
+
+.nameAndButton {
+  display: flex;
+  justify-content: space-between;
+}
+
+.modalBtn {
+  color: var(--White, #fff);
+  font-family: Manrope;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 20px; /* 142.857% */
+  display: inline-flex;
+  padding: 12px 50px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 12px;
+  background: #3470ff;
+  width: 70px;
+  height: 20px;
+  align-self: flex-start;
+}
+
+.rentalAge,
+.mileageColor,
+.price {
+  color: #3470ff;
 }
