--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -22,3 +22,15 @@
   justify-content: center;
   flex-direction: column;
 }
+
+.selectBox {
+  display: flex;
+  gap: 10px;
+}
+
+.label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+}
