--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
     background: transparent;
   }
   ::-webkit-scrollbar-thumb {
-    background: green;
+    background: gray;
     height: 20px;
     border-radius: 15px;
   }
