--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,5 +1,5 @@
 .btn {
-  width: 100%;
+  /* width: 100%; */
   border-radius: 12px;
   background: #ff868d;
   color: var(--White, #fff);
@@ -8,6 +8,13 @@
   font-style: normal;
   font-weight: 600;
   line-height: 20px; /* 142.857% */
+  display: flex;
+  width: 130px;
+  padding-right: 10px;
+  padding-left: 10px;
+  margin: 0 auto;
+  align-items: center;
+  justify-content: center;
 }
 
 .catalogBtn {
@@ -19,6 +26,7 @@
   font-style: normal;
   font-weight: 600;
   line-height: 20px; /* 142.857% */
+  margin-bottom: 20px;
 }
 
 .formBtn {
