--- a/src/components/Car/Car.module.css
+++ b/src/components/Car/Car.module.css
@@ -2,20 +2,23 @@
   width: 274px;
   height: 288px;
   object-fit: cover;
-  border-radius: 14px;
+
+  /* border-radius: 14px; */
 }
 
 .icon {
+  filter: drop-shadow(0 0 2px #fff);
   width: 40px;
   height: 40px;
   position: absolute;
-  fill: green;
+  fill: gray;
   cursor: pointer;
   top: 10px;
   right: 10px;
 }
 
 .active {
+  filter: drop-shadow(0 0 10px #fff);
   fill: #ff868d;
   width: 40px;
   height: 40px;
@@ -26,21 +29,25 @@
 }
 
 .item {
+  overflow: hidden;
   position: relative;
   border-radius: 14px;
   display: flex;
   width: 274px;
   height: 426px;
   flex-direction: column;
+  justify-content: space-between;
+  background-color: grey;
   /* align-items: flex-start; */
   /* gap: 28px; */
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+  padding-bottom: 10px;
 }
 
 .firstBlock {
   display: flex;
   justify-content: space-between;
-  color: #121417;
+  color: white;
   font-family: Manrope;
   font-size: 16px;
   font-style: normal;
@@ -51,7 +58,7 @@
 }
 
 .secondBlock {
-  color: rgba(18, 20, 23, 0.5);
+  color: white;
   font-family: Manrope;
   font-size: 12px;
   font-style: normal;
@@ -63,9 +70,17 @@
 }
 
 .textBlock {
-  height: 138px;
+  position: absolute;
+  top: 265px;
+  box-sizing: border-box;
+
+  background-color: gray;
+  height: 100px;
+  width: 274;
+  border-radius: 14px;
+  /* height: 138px; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 0 10px 0;
+  padding: 0 10px 10px;
 }
