--- a/src/components/CarList/CarList.module.css
+++ b/src/components/CarList/CarList.module.css
@@ -4,6 +4,8 @@
   list-style-type: none;
   column-gap: 29px;
   row-gap: 50px;
-  margin-bottom: 20px;
-  padding: auto;
+  margin: 0 auto 20px;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
 }
