--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -11,4 +11,15 @@
   display: flex;
   flex-wrap: wrap;
   gap: 40px;
+  margin: 0;
+  padding: 0;
+}
+
+.text {
+  margin-left: 40px;
+  margin-bottom: 20px;
+  font-size: 38px;
+  font-weight: 700;
+  color: gray;
+  margin-top: 0;
 }
